js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/not-error-object.js
assert
.
sameValue
(
Object
.
prototype
.
toString
.
call
(
TypeError
.
prototype
)
"
[
object
Object
]
"
)
;
reportCompare
(
0
0
)
;
